force-app/main/default/objects/Draft__c/Draft__c.object-meta.xml
<CustomObject>
    <label>Draft</label>
    <nameField>
        <displayFormat>DF-{000000}</displayFormat>
        <label>Draft Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>