force-app/main/default/objects/Draft__c/fields/Affliated_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Affliated_Agreement__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Agreement__c)),
    HYPERLINK(&apos;/&apos; &amp; Agreement__c,  Agreement__r.Name ),
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affliated Agreement</label>
    <type>Text</type>
</CustomField>