force-app/main/default/objects/Draft__c/fields/Affliated_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Affliated_Agreement_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Agreement__c)),
   Agreement__r.Name ,
   &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affliated Agreement Name</label>
    <type>Text</type>
</CustomField>