force-app/main/default/objects/Draft__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Drafts</relationshipLabel>
    <relationshipName>Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>