force-app/main/default/objects/Draft__c/fields/Agreement_Ground_Interest__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Ground_Interest__c</fullName>
    <formula>Text(Agreement__r.Ground_Interest__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Ground Interest</label>
    <type>Text</type>
</CustomField>