force-app/main/default/objects/Draft__c/fields/AgreementType__c.field-meta.xml
<CustomField>
    <fullName>AgreementType__c</fullName>
    <formula>Text(Agreement__r.Agreement_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgreementType</label>
    <type>Text</type>
</CustomField>