force-app/main/default/objects/Draft__c/fields/BD_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>BD_Email_ID__c</fullName>
    <label>BD Email ID</label>
    <type>Email</type>
</CustomField>