force-app/main/default/objects/Draft__c/fields/BD_Sr__c.field-meta.xml
<CustomField>
    <fullName>BD_Sr__c</fullName>
    <formula>Agreement__r.Project__r.Data_Coordinator__r.FirstName 
+&apos;  &apos;+Agreement__r.Project__r.Data_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project BD Lead</label>
    <type>Text</type>
</CustomField>