force-app/main/default/objects/Draft__c/fields/Documents_to_be_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Documents_to_be_Drafted__c</fullName>
    <label>Documents to be Drafted</label>
    <type>TextArea</type>
</CustomField>