force-app/main/default/objects/Draft__c/fields/Draft_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Complete_Date__c</fullName>
    <label>Draft Complete Date</label>
    <type>Date</type>
</CustomField>