force-app/main/default/objects/Draft__c/fields/Draft_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Request_Date__c</fullName>
    <label>Draft Request Date</label>
    <type>Date</type>
</CustomField>