force-app/main/default/objects/Draft__c/fields/Draft_Status__c.field-meta.xml
<CustomField>
    <fullName>Draft_Status__c</fullName>
    <label>Draft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Edit for Re-Submission</fullName>
                <isActive>false</isActive>
                <label>Edit for Re-Submission</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Submit Draft for Review</fullName>
                <isActive>false</isActive>
                <label>Submit Draft for Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>