force-app/main/default/objects/Draft__c/fields/Drafter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Drafter_Comments__c</fullName>
    <label>RE Contracts Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>