force-app/main/default/objects/Draft__c/fields/Executable_Submission__c.field-meta.xml
<CustomField>
    <fullName>Executable_Submission__c</fullName>
    <label>Executable Submission</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Executeable_Requested__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Submit for Partial Execution (Harmoni)</fullName>
                <isActive>false</isActive>
                <label>Submit for Partial Execution (Harmoni)</label>
            </value>
            <value>
                <fullName>Submit for Partial Execution (Tenant)</fullName>
                <isActive>false</isActive>
                <label>Submit for Partial Execution (Tenant)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>