force-app/main/default/objects/Draft__c/fields/Executables_to_PMD_BD__c.field-meta.xml
<CustomField>
    <fullName>Executables_to_PMD_BD__c</fullName>
    <label>Executables to PMD/BD</label>
    <type>Date</type>
</CustomField>