force-app/main/default/objects/Draft__c/fields/Execution_Method__c.field-meta.xml
<CustomField>
    <fullName>Execution_Method__c</fullName>
    <label>Execution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wet Signature</fullName>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>