force-app/main/default/objects/Draft__c/fields/PC_Comments__c.field-meta.xml
<CustomField>
    <fullName>PC_Comments__c</fullName>
    <label>PC Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>