force-app/main/default/objects/Draft__c/fields/PM_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>PM_Email_ID__c</fullName>
    <label>PM Email ID</label>
    <type>Email</type>
</CustomField>