force-app/main/default/objects/Draft__c/fields/PMD_Comments__c.field-meta.xml
<CustomField>
    <fullName>PMD_Comments__c</fullName>
    <label>PMD Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>