force-app/main/default/objects/Draft__c/fields/PMD_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>PMD_Email_ID__c</fullName>
    <label>PMD Email ID</label>
    <type>Email</type>
</CustomField>