force-app/main/default/objects/Draft__c/fields/Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator__c</fullName>
    <formula>Agreement__r.Project__r.Project_Coordinator__r.FirstName 
+&apos; &apos;+Agreement__r.Project__r.Project_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Coordinator</label>
    <type>Text</type>
</CustomField>