force-app/main/default/objects/Draft__c/fields/Project_Coordinator_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator_Email_ID__c</fullName>
    <label>Project Coordinator Email ID</label>
    <type>Email</type>
</CustomField>