force-app/main/default/objects/Draft__c/fields/Project_Management_Director__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Director__c</fullName>
    <formula>Agreement__r.Project__r.strk__Project_Manager__r.FirstName +&apos; &apos;+ Agreement__r.Project__r.strk__Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Management Director</label>
    <type>Text</type>
</CustomField>