force-app/main/default/objects/Draft__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <formula>Agreement__r.Project__r.Project_Manager__r.FirstName +&apos; &apos;+Agreement__r.Project__r.Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>