force-app/main/default/objects/Draft__c/fields/Related_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Agreement TBD</label>
    <referenceTo>Related_Agreement__c</referenceTo>
    <relationshipLabel>Drafts</relationshipLabel>
    <relationshipName>Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>