force-app/main/default/objects/Draft__c/validationRules/Cannot_Resubmit_Declined_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Resubmit_Declined_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Draft_Status__c), &apos;Declined&apos;),
    NOT(ISPICKVAL(Draft_Status__c, &apos;Declined&apos;))
)</errorConditionFormula>
    <errorMessage>Please create new draft as this draft has been Declined</errorMessage>
</ValidationRule>