force-app/main/default/objects/Draft__c/validationRules/Check_Agreement_Assoication.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Agreement_Assoication</fullName>
    <active>false</active>
    <description>check agreement is there</description>
    <errorConditionFormula>ISChanged(Agreement__c)  &amp;&amp;
(ISNULL(Agreement__c)  || NOT(ISNULL(Agreement__c)))</errorConditionFormula>
    <errorMessage>Draft needs to be link either an agreement or related agreement.</errorMessage>
</ValidationRule>