force-app/main/default/objects/Draft__c/validationRules/Check_Project_is_linked_to_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Project_is_linked_to_Draft</fullName>
    <active>true</active>
    <description>please assign project</description>
    <errorConditionFormula>(ISCHANGED(Draft_Status__c)) &amp;&amp;

  (  ISPICKVAL(Draft_Status__c, &apos;Accepted&apos;) ||
    ISPICKVAL(Draft_Status__c, &apos;Declined&apos;) ||
    ISPICKVAL(Draft_Status__c, &apos;Completed&apos;)) &amp;&amp; IsBlank( Project__c )</errorConditionFormula>
    <errorMessage>You must populate the Project field before setting the draft status to Accepted, Declined, or Completed. Please assign Project to the agreement associated with this draft.</errorMessage>
</ValidationRule>