force-app/main/default/objects/Draft__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affliated_Agreement__c</columns>
    <columns>Affliated_Agreement_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Draft_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>